layout bug fixes

--- a/app/assets/stylesheets/idea.css.sass
+++ b/app/assets/stylesheets/idea.css.sass
@@ -9,7 +9,8 @@
     padding-bottom: 10px
     h1
       width: auto
-      margin: 0 60px 5px 0
+      margin: 0 0 5px 0
+      line-height: 1.2em
     .idea_stats
       color: #666
       span
@@ -57,17 +58,20 @@
     background: url(asset_path('editable_icon.png', 'image')) no-repeat left 5px
     &:hover
       background:
-        color: #FFF
-        color: rgba(255, 255, 255, 0.4)
+        color: #EEE
       cursor: pointer
     &.editing:hover
       background:
         color: transparent
     form
       margin-left: -25px
+      margin-top: 0
       overflow: hidden
       textarea
         min-height: 200px
+      input[name="idea[title]"]
+        font-size: 1em
+        padding: 5px
       button
         margin: 15px 5px
         float: right
